--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,33 +3,38 @@
     <div class="col-md-8">
       <h2>Daftar Contact</h2>
 
-      <table class="table">
+      <table class="table table-secondary">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">No</th>
+            <th scope="col">Nama</th>
+            <th scope="col">No-Hp</th>
+            <th scope="col">Email</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <%if (contacts.length === 0) { %>
+            <tr>
+              <td colspan="5">
+                <div class="alert alert-danger" role="alert">
+                  Empty Data Contacts
+                </div>
+                
+              </td>
+            </tr>
+          <% } %>
+            <%contacts.forEach((data, i) => {i++ %>
+              <tr>
+                <th scope="row"><%= i %></th>
+                <td><%= data.nama %></td>
+                <td><%= data.nohp %></td>
+                <td><%= data.email %></td>
+                <td>
+                  <a href="/contact/<%= data.nama %>" class="btn btn-outline-success btn-sm"><i class="bi bi-info-circle"></i> Detail</a>
+                </td>
+              </tr>
+            <% }); %>
         </tbody>
       </table>
     </div>
