Action Detail in menu Contact

--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,10 +1,9 @@
-
-
-  <h1>Comments</h1>
-  
-  <%comments.forEach(com => { %>
-  <ul>
-    <li><%= com.text %></li>
-  </ul>
-  <% }); %>
-  
+<div class="container border border-1 w-50 p-3">
+  <% comments.forEach(com => { %>
+    <h3 class="mt-3"><%= com.username %></h3>
+    <div class="form-floating mt-3">
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+      <label for="floatingTextarea2"><%= com.text %></label>
+    </div>
+  <% }) %>
+</div>
