--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,6 +3,8 @@
     <div class="col-md-8">
       <h2>Daftar Contact</h2>
 
+      <a href="/contact/add" class="btn btn-primary btn-md mb-2">Add Data</a>
+
       <table class="table table-secondary">
         <thead>
           <tr>
