--- a/views/contact-detail.ejs
+++ b/views/contact-detail.ejs
@@ -16,10 +16,34 @@
           <h5 class="card-title"><%= contact.nama %></h5>
           <h6 class="card-subtitle mb-2 text-body-secondary"><%= contact.nohp %></h6>
           <p class="card-text"><%= contact.email %></p>
-          <a href="/contact" class="card-link">&laquo;Back</a>
+          <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Sure..?')">Delete</a> -->
+          <a href="/contact/edit/<%= contact.nama %>"  class="btn btn-info badge">Update</a>
+          <a href="#" onclick="return confirmDelete('<%= contact.nama %>')" class="btn btn-danger badge">Delete</a>
+          <a href="/contact" class="card-link d-block mt-3">&laquo;Back</a>
         </div>
       </div>
       <% } %>
     </div>
   </div>
 </div>
+
+<script>
+  function confirmDelete(nama){
+    if(confirm('Sure...?')) {
+      fetch(`/contact/${nama}`, {
+        method: 'DELETE'
+      })
+      .then(response => {
+        if(response.ok) {
+          window.location.href = '/contact'
+        } else {
+          alert('Failed to Delete Contact')
+        }
+      })
+      .catch(err => {
+        console.log('Error:', err)
+      })
+    }
+    return false
+  }
+</script>
